--- a/Tokenizer-Base-Service/pom.xml
+++ b/Tokenizer-Base-Service/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>stanford-corenlp</artifactId>
             <version>3.4</version>
         </dependency>
+        <dependency>
+            <groupId>it.cnr.ilc</groupId>
+            <artifactId>Tokenizer-Base</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
