--- a/Tokenizer-Base-Service/pom.xml
+++ b/Tokenizer-Base-Service/pom.xml
@@ -78,7 +78,8 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>my.org.weblicht.DemoApplication</mainClass>
+<!--                                    <mainClass>my.org.weblicht.DemoApplication</mainClass>-->
+                                    <mainClass>it.cnr.ilc.tokenizer.app.TokenizerBaseServiceApp</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
