--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ hs_err_pid*
 /Tokenizer-Base/target/
 /Tokenizer-Base/nbactions.xml
 /Tokenizer-Base-Service/target/
+/PanaceaServicesAsRest/PanaceaSoapClient/target/
