--- a/PanaceaServices/PanaceaServicesSoapClient/pom.xml
+++ b/PanaceaServices/PanaceaServicesSoapClient/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>taverna-soaplab-client</artifactId>
             <version>2.2.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-validator/commons-validator -->
+        <dependency>
+            <groupId>commons-validator</groupId>
+            <artifactId>commons-validator</artifactId>
+            <version>1.4.0</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
