--- a/PanaceaServices/PanaceaServicesSoapClient/pom.xml
+++ b/PanaceaServices/PanaceaServicesSoapClient/pom.xml
@@ -59,6 +59,16 @@
             <artifactId>commons-validator</artifactId>
             <version>1.4.0</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>IlcIOUtils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>IlcSimpleTypes</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
