--- a/Tokenizer-Base-Service/src/assembly/conf/service-config.yaml
+++ b/Tokenizer-Base-Service/src/assembly/conf/service-config.yaml
@@ -1,6 +1,6 @@
 server:
   type: simple
-  applicationContextPath: /services/
+  applicationContextPath: /
   connector:
     type: http
     port: 8100
@@ -9,7 +9,7 @@ server:
     appenders:
       - type: file
         currentLogFilename: /tmp/log/services/access.log
-        archivedLogFilenamePattern: /var/log/Tokenizer-Base-Service/access-%d.log.gz
+        archivedLogFilenamePattern: /tmp/log/services/access-%d.log.gz
         archivedFileCount: 5
 
 logging:
