--- a/PanaceaServices/PanaceaServicesSoapClient/pom.xml
+++ b/PanaceaServices/PanaceaServicesSoapClient/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>IlcSimpleTypes</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>IlcFillSimpleTypes</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
