--- a/IlcConsumerAndProvider/pom.xml
+++ b/IlcConsumerAndProvider/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>IlcSimpleTypes</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>IlcUtils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <name>IlcConsumerAndProvider</name>
 </project>
