20/7/2017 09:00 Added a new project IlcUtils for some variables.

--- a/PanaceaServices/PanaceaServicesSoapClient/pom.xml
+++ b/PanaceaServices/PanaceaServicesSoapClient/pom.xml
@@ -64,6 +64,11 @@
             <artifactId>IlcFillSimpleTypes</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>IlcUtils</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
