21/7/2017 09:00 tested output formats kaf and tab with service output tagged, token and splitted

--- a/PanaceaServices/PanaceaServicesSoapClient/pom.xml
+++ b/PanaceaServices/PanaceaServicesSoapClient/pom.xml
@@ -69,6 +69,11 @@
             <artifactId>IlcUtils</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>IlcConsumerAndProvider</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
