--- a/PanaceaServices/PanaceaServicesWrapper/pom.xml
+++ b/PanaceaServices/PanaceaServicesWrapper/pom.xml
@@ -31,11 +31,7 @@
             <artifactId>stanford-corenlp</artifactId>
             <version>3.4</version>
         </dependency>
-        <dependency>
-            <groupId>it.cnr.ilc</groupId>
-            <artifactId>Tokenizer-Base</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+        
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>PanaceaServicesSoapClient</artifactId>
@@ -84,7 +80,7 @@
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 <!--                                    <mainClass>my.org.weblicht.DemoApplication</mainClass>-->
-                                    <mainClass>it.cnr.ilc.tokenizer.app.TokenizerBaseServiceApp</mainClass>
+                                    <mainClass>it.cnr.ilc.panaceaserviceswrapper.app.PanaceaServiceApp</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
