--- a/PanaceaServices/PanaceaServicesWrapper/pom.xml
+++ b/PanaceaServices/PanaceaServicesWrapper/pom.xml
@@ -37,6 +37,11 @@
             <artifactId>PanaceaServicesSoapClient</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>Tokenizer-Base</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
