--- a/PanaceaServices/PanaceaServicesWrapper/pom.xml
+++ b/PanaceaServices/PanaceaServicesWrapper/pom.xml
@@ -14,8 +14,23 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    <repositories>
+        <repository>
+            <id>localRepository</id>
+            <name>Local Repository</name>
+            <url>/${user.dir}/.m2/repository/com/github/cltl/KafSaxParser/v3.1.2/</url>
+        </repository>
+       
+    </repositories>
 
     <dependencies>
+        
+        <dependency>
+            <groupId>com.github.cltl</groupId>
+            <artifactId>KafSaxParser</artifactId>
+            <version>v3.1.2</version>
+        </dependency>
+       
         <dependency>
             <groupId>eu.clarin.weblicht</groupId>
             <artifactId>wlfxb</artifactId>
@@ -84,7 +99,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-<!--                                    <mainClass>my.org.weblicht.DemoApplication</mainClass>-->
+                                    <!--                                    <mainClass>my.org.weblicht.DemoApplication</mainClass>-->
                                     <mainClass>it.cnr.ilc.panaceaserviceswrapper.app.PanaceaServiceApp</mainClass>
                                 </transformer>
                             </transformers>
