--- a/OpeNerServices/OpeNerServiceWrapper/pom.xml
+++ b/OpeNerServices/OpeNerServiceWrapper/pom.xml
@@ -24,6 +24,12 @@
     </repositories>
 
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/com.sun.jersey.contribs/jersey-multipart -->
+        <dependency>
+            <groupId>com.sun.jersey.contribs</groupId>
+            <artifactId>jersey-multipart</artifactId>
+            <version>1.19.4</version>
+        </dependency>
         
         <dependency>
             <groupId>com.github.cltl</groupId>
@@ -52,7 +58,7 @@
             <artifactId>OpeNerServicesRestClient</artifactId>
             <version>${project.version}</version>
         </dependency>
-<!--        <dependency>
+        <!--        <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>Tokenizer-Base</artifactId>
             <version>${project.version}</version>
